fix user page Dark mode

--- a/client/src/styles/pages/course.scss
+++ b/client/src/styles/pages/course.scss
@@ -14,7 +14,7 @@
     }
     h1{
       font-size: 45px;
-
+      color: var(--color-text);
       margin: 0 0 0 20px;
     }
   }
