--- a/client/src/styles/pages/user.scss
+++ b/client/src/styles/pages/user.scss
@@ -11,6 +11,7 @@
     flex-direction: column;
     padding: 15px;
     cursor: pointer;
+    color: var(--color-text);
     .vertical-nav-tab-content{
       display: flex;
       justify-content: space-between;
